[package]
name = "kaspa-cli"
description = "Kaspa CLI library"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[features]
legacy-rpc = ["kaspa-wallet-core/legacy-rpc"]
default = []

[lib]
name = "kaspa_cli_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
cfg-if.workspace = true
convert_case.workspace = true
futures.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wrpc-client.workspace = true
pad.workspace = true
thiserror.workspace = true
workflow-core.workspace = true
workflow-store.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-nw.workspace = true
workflow-terminal.workspace = true
workflow-node.workspace = true
workflow-wasm.workspace = true
# workflow-wasm.workspace = true
serde_json.workspace = true
serde.workspace = true
kaspa-consensus-core.workspace = true
textwrap.workspace = true
kaspa-core.workspace = true
separator.workspace = true
kaspa-addresses.workspace = true
downcast.workspace = true
nw-sys.workspace = true
kaspa-daemon.workspace = true
wasm-bindgen.workspace = true
regex.workspace = true
js-sys.workspace = true
kaspa-rpc-core.workspace = true
borsh.workspace = true
kaspa-utils.workspace = true
dashmap.workspace = true
faster-hex.workspace = true
kaspa-bip32.workspace = true
# web-sys.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'Document',
    'Window',
    'Node',
    'Element',
    'HtmlElement',
    'DomTokenList',
    # 'HtmlElement',
    # 'CustomEvent',
    # 'MouseEvent'
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
