[package]
name = "keryx-consensus"
description = "Kaspa consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
keryx-addresses.workspace = true
keryx-consensus-core.workspace = true
keryx-consensus-notify.workspace = true
keryx-consensusmanager.workspace = true
keryx-core.workspace = true
keryx-database.workspace = true
keryx-hashes.workspace = true
keryx-math.workspace = true
keryx-merkle.workspace = true
keryx-muhash.workspace = true
keryx-notify.workspace = true
keryx-pow.workspace = true
keryx-txscript.workspace = true
keryx-txscript-errors.workspace = true
keryx-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
keryx-txscript-errors.workspace = true
keryx-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["keryx-consensus-core/devnet-prealloc"]

[lints]
workspace = true
