[package]
name = "kaspa-core"
description = "Kaspa core"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
wasm-bindgen.workspace = true
log.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
workflow-log.workspace = true
triggered.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log4rs = { workspace = true, features = ["all_components", "gzip", "background_rotation"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }
ctrlc = { workspace = true, features = ["termination"] }
intertrait.workspace = true
num_cpus.workspace = true
