[package]
name = "kaspa-core"
description = "Kaspa core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfg-if.workspace = true
futures-util.workspace = true
log.workspace = true
thiserror.workspace = true
triggered.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = { workspace = true, features = ["termination"] }
intertrait.workspace = true
log4rs = { workspace = true, features = ["all_components", "gzip", "background_rotation"] }
num_cpus.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }
