[package]
name = "kaspa-daemon"
description = "Utilities for running Kaspa node and tools as a child processes"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
cfg-if.workspace = true
futures.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-store.workspace = true
workflow-node.workspace = true
workflow-nw.workspace = true
nw-sys.workspace = true
thiserror.workspace = true
kaspa-consensus-core.workspace = true
borsh.workspace = true
serde.workspace = true
downcast-rs.workspace = true
kaspa-addresses.workspace = true
kaspa-wallet-core.workspace = true
