[package]
name = "kaspa-database"
description = "Kaspa database"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
rocksdb.workspace = true
serde.workspace = true
bincode.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
rand.workspace = true
faster-hex.workspace = true
kaspa-hashes.workspace = true
kaspa-utils.workspace = true
smallvec.workspace = true
itertools.workspace = true
num_cpus.workspace = true
tempfile.workspace = true

enum-primitive-derive = "0.2.2"
num-traits = "0.2.15"
