[package]
name = "kaspa-database"
description = "Kaspa database"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
enum-primitive-derive.workspace = true
faster-hex.workspace = true
indexmap.workspace = true
kaspa-hashes.workspace = true
kaspa-utils.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
rand.workspace = true
rocksdb.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[package.metadata.cargo-machete]
ignored = ["num-traits"]
