[package]
name = "event-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
hashes.workspace = true
thiserror.workspace = true
consensus-core.workspace = true
consensus.workspace = true
kaspa-core.workspace = true
kaspa-utils.workspace = true
utxoindex.workspace = true
async-channel.workspace = true
log.workspace = true
futures = "0.3.25"
triggered = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
rand = { workspace = true}