[package]
name = "kaspa-fd-budget-pool"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlimit = "0.10.1"
cfg-if.workspace = true
