[package]
name = "keryxd"
description = "Kaspa full node daemon"
keywords = ["keryx", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "keryxd_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
keryx-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

keryx-addresses.workspace = true
keryx-addressmanager.workspace = true
keryx-consensus-core.workspace = true
keryx-consensus-notify.workspace = true
keryx-consensus.workspace = true
keryx-consensusmanager.workspace = true
keryx-core.workspace = true
keryx-database.workspace = true
keryx-grpc-server.workspace = true
keryx-hashes.workspace = true
keryx-index-processor.workspace = true
keryx-mining.workspace = true
keryx-notify.workspace = true
keryx-p2p-flows.workspace = true
keryx-p2p-lib.workspace = true
keryx-p2p-mining.workspace = true
keryx-perf-monitor.workspace = true
keryx-rpc-core.workspace = true
keryx-rpc-service.workspace = true
keryx-txscript.workspace = true
keryx-utils.workspace = true
keryx-utils-tower.workspace = true
keryx-utxoindex.workspace = true
keryx-wrpc-server.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["env"]}
dhat = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
serde_json.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "keryx-alloc/heap"]
devnet-prealloc = ["keryx-consensus/devnet-prealloc"]
semaphore-trace = ["keryx-utils/semaphore-trace"]

[lints]
workspace = true
