[package]
name = "kdapp"
description = "Kaspa Dapps"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-utils.workspace = true
sha2.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "serde",
] }
serde.workspace = true
bincode.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
