[package]
name = "kaspa-mining"
description = "Kaspa mining"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kaspa-addresses.workspace = true
kaspa-hashes.workspace = true
kaspa-muhash.workspace = true
kaspa-consensus-core.workspace = true
kaspa-txscript.workspace = true
kaspa-core.workspace = true
kaspa-mining-errors.workspace = true
kaspa-consensusmanager.workspace = true
kaspa-utils.workspace = true

thiserror.workspace = true
serde.workspace = true
log.workspace = true
futures-util.workspace = true
smallvec.workspace = true
rand.workspace = true
parking_lot.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }

[dev-dependencies]
kaspa-txscript.workspace = true
criterion.workspace = true
secp256k1 = { version = "0.24", features = ["global-context", "rand-std"] }

[[bench]]
name = "bench"
harness = false
