[package]
name = "keryx-mining"
description = "Kaspa mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keryx-addresses.workspace = true
keryx-consensus-core.workspace = true
keryx-consensusmanager.workspace = true
keryx-core.workspace = true
keryx-hashes.workspace = true
keryx-mining-errors.workspace = true
keryx-muhash.workspace = true
keryx-txscript.workspace = true
keryx-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
keryx-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
