[package]
name = "kaspa-notify"
description = "Kaspa notification subsystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kaspa-addresses.workspace = true
kaspa-core.workspace = true
kaspa-utils.workspace = true
kaspa-consensus-core.workspace = true
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
serde.workspace = true
derive_more.workspace = true
thiserror.workspace = true
borsh.workspace = true
async-channel.workspace = true
log.workspace = true
futures-util.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
triggered.workspace = true
workflow-core.workspace = true
paste.workspace = true
parking_lot.workspace = true
workflow-log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
