[package]
name = "kaspa-perf-monitor"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaspa-core.workspace = true
log.workspace = true
thiserror.workspace = true

crossbeam = "0.8.2"
#procfs = "0.15.1"
perf_monitor = {version = "0.2.0", git = "https://github.com/larksuite/perf-monitor-rs", branch = "memory"}
tokio = { workspace = true, features = ["rt", "macros", "time"] }