[package]
name = "python"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[lib]
name = "kaspapy"
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
kaspa-addresses.workspace = true
kaspa-wallet-keys.workspace = true
kaspa-wrpc-python.workspace = true
pyo3.workspace = true

[features]
default = []
py-sdk = [
    "kaspa-addresses/py-sdk",
    "kaspa-wallet-keys/py-sdk",
    "kaspa-wrpc-python/py-sdk",
]
